--- a/provision/ruby.ansible.yml
+++ b/provision/ruby.ansible.yml
@@ -28,9 +28,5 @@
   become_method: sudo
   command: bash -lc "rvm use 2.1.3 && gem install bundler"
 
-- name: Install bundler for vagrant user
-  when: detect_ruby.rc != 0
-  command: bash -lc "rvm use 2.1.3 && gem install bundler"
-
-- name: Install gems for existing code for
+- name: Install gems for existing code
   command: bash -lc "rvm use 2.1.3 && cd /www && bundle install"
