--- a/provision/passenger.ansible.yml
+++ b/provision/passenger.ansible.yml
@@ -17,6 +17,24 @@
   become_method: sudo
   apt: name=passenger state=present
 
+- name: Create additional nginx config directory
+  become: yes
+  become_method: sudo
+  file: path=/etc/nginx/main.d state=directory
+  when: nginx_package.rc != 0
+
+- name: Update nginx.conf to use additional config directory
+  become: yes
+  become_method: sudo
+  when: nginx_package.rc != 0
+  command: "sed '5iinclude /etc/nginx/main.d/*.conf\n' nginx.conf"
+
+- name: Add nginx environment variable config file
+  become: yes
+  become_method: sudo
+  when: nginx_package.rc != 0
+  copy: src='{{provision_path}}/nginx.environment.conf' dest='/etc/nginx/main.d/environment.conf
+  
 # uncomment passenger_root in nginx and force passenger to use rvm's 2.1.3 ruby
 - name: Update nginx.conf for passenger
   become: yes
