Create Dockerfile for app.

--- a/provision/nginx.environment.conf
+++ b/provision/nginx.environment.conf
@@ -30,3 +30,8 @@ env BOOKCLUB_SMTP_FROMADDRESS;
 env BOOKCLUB_REDIS_SERVER;
 env BOOKCLUB_REDIS_PORT;
 env BOOKCLUB_REDIS_DB;
+
+env PATH;
+env LC_ALL;
+env LC_CTYPE;
+env LANG;
